# typegen

./: .gitignore  README.md  pyproject.toml
tests/: fish_obj.py  test_typegen_cli.py
typegen/: generate.py  main.py
