[tool.poetry]
name = "typegen"
version = "0.1.2"
description = "Auto generate typed dicts."
homepage = "https://github.com/pestosoftware/typegen"
authors = ["Thomas Staats <thomas.staats443@gmail.com>"]
readme = "README.md"
packages = [
    { include = "typegen" },
    { include = "tests" },
    { include = "out" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytype = "^2023.8.31"

[tool.poetry.scripts]
typegen = "typegen.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
